--- a/a3_info474/style.css
+++ b/a3_info474/style.css
@@ -1,8 +1,6 @@
 div.tooltip { 
     position: absolute; 
-    text-align: center; 
-    width: 200px; 
-    height: 28px; 
+    text-align: left; 
     font: 12px sans-serif; 
     background: lightsteelblue; 
     border: 0px; pointer-events: none; }
