--- a/a3_info474/style.css
+++ b/a3_info474/style.css
@@ -9,3 +9,13 @@ div.tooltip {
   	width: 800px;
   	height: 650px;
   }
+
+  h1 {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  p {
+    font-size: 1.25rem;
+  }
+
+  
